native/src/xlog_ffi.h

// xlog_ffi.h — pure C FFI surface over Tencent mars-xlog.
//
// This header is the single source of truth for both:
//   1. the native shim implementation (native/src/xlog_ffi.cc), and
//   2. the Dart bindings generated by ffigen (see ffigen.yaml).
//
// It exposes ONLY the hot-path logging calls. Cold paths that need the app
// sandbox directory (init / listLogFiles / getLogDir) stay on the platform
// MethodChannel — see docs/ffi_0.2.0_plan.md.
//
// All functions operate on mars' process-global appender, so it does not matter
// whether the appender was opened from here or from the MethodChannel side: both
// drive the same underlying logger instance.

#ifndef XLOG_FFI_H_
#define XLOG_FFI_H_

#ifdef __cplusplus
extern "C" {
#endif

// Open/configure the global appender. In the 0.2.0 hybrid design `init` runs on
// the MethodChannel (it needs the sandbox path), so Dart does not normally call
// this; it is exported for completeness and native/standalone testing.
//   level         mars TLogLevel (0=verbose .. 6=none)
//   console_open  mirror to logcat/Xcode console (0/1)
//   compress_mode 0=zlib (default, decoder-compatible), 1=zstd
void xlog_ffi_open(int level,
                   int console_open,
                   const char* log_dir,
                   const char* cache_dir,
                   const char* name_prefix,
                   int cache_days,
                   const char* pub_key,
                   int compress_mode);

// Set the global minimum level at runtime.
void xlog_ffi_set_level(int level);

// Current global level (mars TLogLevel).
int xlog_ffi_get_level(void);

// Whether `level` would be written. Lets Dart short-circuit before converting
// strings. Returns non-zero if enabled.
int xlog_ffi_is_enabled(int level);

// Write one log line. `msg` must be a NUL-terminated UTF-8 string. `msg_len`
// is accepted for forward compatibility; the underlying mars API consumes a
// C string and is currently length-agnostic.
void xlog_ffi_log(int level, const char* tag, const char* msg, int msg_len);

// Flush the mmap buffer. sync != 0 blocks until the write completes.
void xlog_ffi_flush(int sync);

// Flush and close the global appender. Safe to call repeatedly; mars guards
// against use-after-close internally.
void xlog_ffi_close(void);

#ifdef __cplusplus
}
#endif

#endif  // XLOG_FFI_H_