lib/src/xlog_ffi_bindings.dart

// GENERATED CODE - DO NOT MODIFY BY HAND.
// Regenerate with: dart run ffigen --config ffigen.yaml
// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names, unused_element, unused_field, return_of_invalid_type, void_checks, annotate_overrides, no_leading_underscores_for_local_identifiers, library_private_types_in_public_api

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Low-level FFI bindings for the mars-xlog C shim (native/src/xlog_ffi.h).
class XLogFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  XLogFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  XLogFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Open/configure the global appender. In the 0.2.0 hybrid design `init` runs on
  /// the MethodChannel (it needs the sandbox path), so Dart does not normally call
  /// this; it is exported for completeness and native/standalone testing.
  /// level         mars TLogLevel (0=verbose .. 6=none)
  /// console_open  mirror to logcat/Xcode console (0/1)
  /// compress_mode 0=zlib (default, decoder-compatible), 1=zstd
  void xlog_ffi_open(
    int level,
    int console_open,
    ffi.Pointer<ffi.Char> log_dir,
    ffi.Pointer<ffi.Char> cache_dir,
    ffi.Pointer<ffi.Char> name_prefix,
    int cache_days,
    ffi.Pointer<ffi.Char> pub_key,
    int compress_mode,
  ) {
    return _xlog_ffi_open(
      level,
      console_open,
      log_dir,
      cache_dir,
      name_prefix,
      cache_days,
      pub_key,
      compress_mode,
    );
  }

  late final _xlog_ffi_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('xlog_ffi_open');
  late final _xlog_ffi_open = _xlog_ffi_openPtr.asFunction<
      void Function(int, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>, int)>();

  /// Set the global minimum level at runtime.
  void xlog_ffi_set_level(
    int level,
  ) {
    return _xlog_ffi_set_level(
      level,
    );
  }

  late final _xlog_ffi_set_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
          'xlog_ffi_set_level');
  late final _xlog_ffi_set_level =
      _xlog_ffi_set_levelPtr.asFunction<void Function(int)>();

  /// Current global level (mars TLogLevel).
  int xlog_ffi_get_level() {
    return _xlog_ffi_get_level();
  }

  late final _xlog_ffi_get_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('xlog_ffi_get_level');
  late final _xlog_ffi_get_level =
      _xlog_ffi_get_levelPtr.asFunction<int Function()>();

  /// Whether `level` would be written. Lets Dart short-circuit before converting
  /// strings. Returns non-zero if enabled.
  int xlog_ffi_is_enabled(
    int level,
  ) {
    return _xlog_ffi_is_enabled(
      level,
    );
  }

  late final _xlog_ffi_is_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'xlog_ffi_is_enabled');
  late final _xlog_ffi_is_enabled =
      _xlog_ffi_is_enabledPtr.asFunction<int Function(int)>();

  /// Write one log line. `msg` must be a NUL-terminated UTF-8 string. `msg_len`
  /// is accepted for forward compatibility; the underlying mars API consumes a
  /// C string and is currently length-agnostic.
  void xlog_ffi_log(
    int level,
    ffi.Pointer<ffi.Char> tag,
    ffi.Pointer<ffi.Char> msg,
    int msg_len,
  ) {
    return _xlog_ffi_log(
      level,
      tag,
      msg,
      msg_len,
    );
  }

  late final _xlog_ffi_logPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('xlog_ffi_log');
  late final _xlog_ffi_log = _xlog_ffi_logPtr.asFunction<
      void Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  /// Flush the mmap buffer. sync != 0 blocks until the write completes.
  void xlog_ffi_flush(
    int sync1,
  ) {
    return _xlog_ffi_flush(
      sync1,
    );
  }

  late final _xlog_ffi_flushPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('xlog_ffi_flush');
  late final _xlog_ffi_flush =
      _xlog_ffi_flushPtr.asFunction<void Function(int)>();

  /// Flush and close the global appender. Safe to call repeatedly; mars guards
  /// against use-after-close internally.
  void xlog_ffi_close() {
    return _xlog_ffi_close();
  }

  late final _xlog_ffi_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('xlog_ffi_close');
  late final _xlog_ffi_close = _xlog_ffi_closePtr.asFunction<void Function()>();
}
